<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppT4rl_view</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_status">No Status</string>
    <string name="hint">Type your state here</string>
    <string name="submit">Submit Status</string>
    <string name="hold">Hold Status</string>
    <string name="release">Release Status</string>

    <string-array name="states_array">
        <item>Online</item>
        <item>Away</item>
        <item>Offline</item>
    </string-array>

</resources>
